# Projekt2v2_machine_ta

./: CMakeLists.txt  IO.c  IO.h  game.c  game.h  inorder.txt  main.c
